--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="mths, ics2o" />
   <meta name="author" content="Caleb" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/style.css"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
   <link rel="stylesheet"
 href="https://code.getmdl.io/1.3.0/material.cyan-amber.min.css"/>
@@ -32,12 +32,11 @@ href="https://code.getmdl.io/1.3.0/material.cyan-amber.min.css"/>
    <p>Michael has built relationships with companies such as Mozilla, Microsoft, Google and Adobe, and has contributed to the accessibility of their products.</p>
     <p>His Screen Reader project went up to the next level when Curran was invited to a disability conference in the US, where he was able to present the technology to some of the world’s leading IT companies.</p>
     <p>While NVDA has partnerships with Big Tech companies such as Mozilla, Microsoft and Google, it has developed internationally into a sort of blind people’s technology club, with the screen reader being translated from English into more than 55 different languages by volunteers in each country who undertake the translation.</p>
-    <p>This level of involvement among the blind community internationally makes NVDA unique in its field, as access to its screen reader is free, while other screen readers can cost up to $3000.</p>
-    <p> Quotes:</p>
-    <div id=divID><cite>“We’d say things like <br>‘gee, wouldn’t it be good if we could develop free software instead of having to pay thousands for it’.”</br></cite>
+   <p>This level of involvement among the blind community internationally makes NVDA unique in its field, as access to its screen reader is free, while other screen readers can cost up to $3000.</p>
+   <p>Quotes:</p>
+    <div id=divID><cite>“We’d say things like <br>‘gee, wouldn’t it be good if we could develop free software instead of having to pay thousands for it’.”</cite>
   </div>
-    <br></br>
-  <div id=divID><cite>“We've always been driven by the idea that everyone, <br>no matter their ability, </br>has a right and responsibility to contribute to society. But some people may require a few extra tools to do it.”</br></cite>
+  <div id=divID><cite>“We've always been driven by the idea that everyone, <br>no matter their ability, </br>has a right and responsibility to contribute to society. But some people may require a few extra tools to do it.”</cite>
     <img src="./images/NVAccess.png"alt="NVAccess Logo" width="300" height="150" align="center">
    </main>
   </div>
