Corrected linter errors

--- a/index.html
+++ b/index.html
@@ -35,6 +35,5 @@ href="https://code.getmdl.io/1.3.0/material.cyan-amber.min.css"/>
    <p>This level of involvement among the blind community internationally makes NVDA unique in its field, as access to its screen reader is free, while other screen readers can cost up to $3000.</p>
    <p>Quotes:</p>
     <div id=divID><cite>“We’d say things like <br>‘gee, wouldn’t it be good if we could develop free software instead of having to pay thousands for it’.”<br>
-  “We've always been driven by the idea that everyone, <br>no matter their ability, has a right and responsibility to contribute to society. But some people may require a few extra tools to do it.”</cite>
+  “We've always been driven by the idea that everyone, <br>no matter their ability, <br>has a right and responsibility to contribute to society. But some people may require a few extra tools to do it.”</cite>
     <img src="./images/NVAccess.png"alt="NVAccess Logo" width="300" height="150">
-</HTML>
